k8s/18-trip-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trip-db
  namespace: tripplanner
spec:
  selector:
    app: trip-db
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
