k8s/26-kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: tripplanner
spec:
  selector:
    app: kafka
  ports:
  - name: kafka-internal
    port: 19092
    targetPort: 19092
  - name: kafka-external
    port: 9092
    targetPort: 9092
  type: ClusterIP
